log
Thu, Mar 27, 2025  5:25:46 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Thu, Mar 27, 2025  5:36:32 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d1cb8ba
Thu, Mar 27, 2025  5:37:44 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:5: error: expected ';' before 'return'
     return list->current;
     ^~~~~~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ad17f01
Thu, Mar 27, 2025  5:38:08 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:5: error: expected ';' before 'return'
     return list->current->data;
     ^~~~~~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9e07b3e
Thu, Mar 27, 2025  5:38:16 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3d8ee2e
Thu, Mar 27, 2025  5:39:28 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
11f7329
Thu, Mar 27, 2025  5:40:41 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
b9193fb
Thu, Mar 27, 2025  5:41:59 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
f11f5f4
Thu, Mar 27, 2025  5:45:06 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
58aea33
Thu, Mar 27, 2025  5:45:34 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
21a4697
Thu, Mar 27, 2025  5:45:58 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
fd8bdb8
Thu, Mar 27, 2025  5:46:24 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
0ca0a33
Thu, Mar 27, 2025  5:46:43 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2d9fce8
Thu, Mar 27, 2025  5:52:40 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
91987b7
Thu, Mar 27, 2025  5:55:12 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
529023c
Thu, Mar 27, 2025  5:55:31 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
f2ff7cb
Thu, Mar 27, 2025  6:07:46 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
2f9fde8
Thu, Mar 27, 2025  6:08:20 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
1fbbf44
Thu, Mar 27, 2025  6:11:28 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:67:35: error: 'return' with a value, in function returning void [-Werror]
     if(list->head == NULL) return NULL;
                                   ^~~~
list.c:65:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4748573
Thu, Mar 27, 2025  6:11:47 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
120f2db
Thu, Mar 27, 2025  6:12:18 PM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
47f45f8
Thu, Mar 27, 2025  6:14:06 PM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|3
total_score: 35/70
cdaf450
Thu, Mar 27, 2025  6:23:45 PM: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
32939c9
Fri, Mar 28, 2025  6:36:05 PM: 
 tests:  9|3
total_score: 35/70
59423dd
Fri, Mar 28, 2025  7:07:57 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
0d98e7b
Fri, Mar 28, 2025  7:14:30 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8b24c53
Fri, Mar 28, 2025  7:18:17 PM: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
25cc2d5
Fri, Mar 28, 2025  7:51:04 PM: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  10|2
total_score: 45/70
61c5106
Fri, Mar 28, 2025  7:52:15 PM: 
 list.c | 23 ++++++++++-------------
 1 file changed, 10 insertions(+), 13 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:84:39: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL) return NULL;
                                       ^~~~
list.c:82:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0c38d8e
Fri, Mar 28, 2025  7:52:31 PM: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:84:39: error: 'return' with a value, in function returning void [-Werror]
     if (list->current == NULL) return NULL;
                                       ^~~~
list.c:82:6: note: declared here
 void pushCurrent(List * list, void * data) {
      ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
37522a8
Fri, Mar 28, 2025  7:52:43 PM: 
 list.c | 11 -----------
 1 file changed, 11 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:83:11: error: unused variable 'nodo' [-Werror=unused-variable]
     Node* nodo = createNode(data);
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e9e181c
Fri, Mar 28, 2025  7:54:39 PM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
8856972
Fri, Mar 28, 2025  7:56:06 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
a55b037
Fri, Mar 28, 2025  7:57:02 PM: 
 list.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  0|0
3684ff9
Fri, Mar 28, 2025  7:58:00 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c84b718
Fri, Mar 28, 2025  7:58:10 PM: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  10|2
total_score: 45/70
6067234
Fri, Mar 28, 2025  8:04:42 PM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
a2e7847
Fri, Mar 28, 2025  8:05:00 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
10b5c2d
Fri, Mar 28, 2025  8:09:27 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
6bccb1b
Fri, Mar 28, 2025  8:15:05 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
e4e6b72
Fri, Mar 28, 2025  8:15:34 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3ae3057
Fri, Mar 28, 2025  8:18:22 PM: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'popCurrent':
list.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5384055
Fri, Mar 28, 2025  8:18:44 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
17294c0
Fri, Mar 28, 2025  8:19:17 PM: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
f42fde9
Fri, Mar 28, 2025  8:20:10 PM: 
 list.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  11|1
total_score: 55/70
fd6a68d
Fri, Mar 28, 2025  8:21:11 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 55/70
945b55b
Fri, Mar 28, 2025  8:21:58 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
8b33758
Fri, Mar 28, 2025  8:22:10 PM: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  11|1
total_score: 55/70
b0beb8a
